# tstack

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conductor.json  setup  uninstall
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: validate-frontmatter.js
.github/workflows/: ci.yml  docs.yml  release.yml
agents/: tai-explorer.md  tai-implementer.md
cli/: Cargo.toml
cli/src/: cli.rs  config.rs  frontmatter.rs  main.rs  symlink.rs  types.rs  ui.rs
cli/src/commands/: add.rs  doctor.rs  install.rs  list.rs  mod.rs  run.rs  status.rs  template.rs  uninstall.rs  version.rs
cli/tests/common/: mod.rs
commands/: tai-commit.md  tai-context.md  tai-debug.md  tai-execute.md  tai-feature.md  tai-help.md  tai-implement.md  tai-mission.md  tai-new-agent.md  tai-new-command.md  tai-next.md  tai-plan.md  tai-refactor.md  tai-resume.md  tai-review.md  tai-scope.md  tai-ship.md  tai-status.md  tai-task.md  tai-test.md  tai-undo.md  tai-validate.md  tai-verify.md
commands/git/: commit.md  ship.md  undo.md
commands/lifecycle/: dag-execute.md  linear.md
commands/planning/: context.md  execute.md  feature.md  next.md  scope.md  task.md
docs/: EVALUATION.md  README.md  agent-teams.md  agents.md  cli.md  commands.md  extensions.md  hooks.md  install.md  missions.md  quality-pipeline.md  skills.md  tiers.md
docs-site/: CLAUDE.md  astro.config.mjs  package.json  pnpm-lock.yaml
hooks/: guard-dangerous.js  guard-destructive.js  guard-pnpm.js  tai-agent-return-validator.js  tai-branch-guard.js  tai-quality-gate.js
(+88 files in other folders)
